--- a/packages/components/src/components/textarea/textarea.css
+++ b/packages/components/src/components/textarea/textarea.css
@@ -26,7 +26,7 @@ scale-textarea {
     var(--telekom-color-functional-focus-standard);
   --spacing-x-control: var(--telekom-spacing-unit-x3);
   --spacing-bottom-control: var(--telekom-spacing-unit-x3);
-  --spacing-top-control: var(--telekom-spacing-unit-x7);
+  --spacing-top-control: 19px;
   --color-disabled: var(--telekom-color-text-and-icon-disabled);
   --background-disabled: transparent;
   --border-color-readonly: transparent;
@@ -61,8 +61,7 @@ scale-textarea {
   --transition-label: var(--transition);
   --font-size-label: var(--telekom-typography-font-size-body);
   --font-weight-label: var(--telekom-typography-font-weight-medium);
-  /* not sure if we should hard code 10px here, to qa feedback */
-  --font-size-label-focus: var(--telekom-typography-font-size-badge);
+  --font-size-label-focus: var(--telekom-typography-font-size-small);
   --font-weight-label-focus: var(--telekom-typography-font-weight-bold);
 }
 
@@ -146,18 +145,18 @@ scale-textarea {
   pointer-events: none;
   font-size: var(--font-size-label);
   font-weight: var(--font-weight-label);
-  line-height: 100%;
+  line-height: 1;
   transform: translate(
     var(--spacing-x-control),
-    var(--telekom-spacing-unit-x4)
+    14px
   );
 }
 .textarea--has-focus .textarea__label,
 .animated .textarea__label {
-  line-height: 125%;
+  line-height: 1;
   transform: translate(
     var(--spacing-x-control),
-    var(--telekom-spacing-unit-x3)
+    var(--telekom-spacing-unit-x2)
   );
   font-size: var(--font-size-label-focus);
   font-weight: var(--font-weight-label-focus);
